Set up first section of page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
     </head>
 
     <body>
+        <div class="first-section">
+            <div class="header">
+                <h1>Header Logo</h1>
+                <div class="links">
+                    <h2>header link one</h2>
+                    <h2>header link two</h2>
+                    <h2>header link three</h2>
+                </div>
+            </div>
+            <div class="hero-container">
+                <div class="hero-main">
+                    <p class="main-text">This website is awesome</p>
+                    <p class="secondary-text">This website has some subtext that goes here under the main title. It's a small 
+                        font and the color is lower contrast.</p>
+                    <p class="button">Sign up</p>
+                </div>
+                <img src="./images/disneyland1.jpg" alt="disneyland" height="300">
+            </div>
+        </div>
+        <div class="second-section">
 
+        </div>
+        <div class="third-section">
+
+        </div>
+        <div class="fourth-section">
     </body>
 </html>
