Add second section of page

--- a/index.html
+++ b/index.html
@@ -27,6 +27,25 @@
             </div>
         </div>
         <div class="second-section">
+            <div class="random-title">Some random information.</div>
+            <div class="image-content">
+                <div class="image-container">
+                    <img class="image-row" src="./images/tickets.jpg" alt="disneyland tickets" height="150">
+                    <p class="caption">Tickets!</p>
+                </div>
+                <div class="image-container">
+                    <img class="image-row" src="./images/california-adventure.jpg" alt="california adventure" height="150">
+                    <p class="caption">California Adventure!</p>
+                </div>
+                <div class="image-container">
+                    <img class="image-row" src="./images/cafe.jpg" alt="Flo's V8 cafe" height="150">
+                    <p class="caption">Flo's V8 Cafe!</p>
+                </div>
+                <div class="image-container">
+                    <img class="image-row" src="./images/goofy.jpg" alt="goofy" height="150">
+                    <p class="caption">Goofy!</p>
+                </div>
+            </div>
 
         </div>
         <div class="third-section">
