--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <img src="./images/disneyland1.jpg" alt="disneyland" height="300">
             </div>
         </div>
+
         <div class="second-section">
             <div class="random-title">Some random information.</div>
             <div class="image-content">
@@ -49,7 +50,11 @@
 
         </div>
         <div class="third-section">
-
+            <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe
+                it's just filling up space, or maybe people will actually read it. Who knows? All 
+                I know is that it looks nice.
+            </div>
+            <div class="quote-source">-Thor, God of Thunder.</div>
         </div>
         <div class="fourth-section">
     </body>
