--- a/index.html
+++ b/index.html
@@ -66,6 +66,6 @@
             </div>
             
         </div>
-
+        <footer><div class="copyright">Copyright &copy The Odin Project 2021</div></footer>
     </body>
 </html>
